Fix final final
Fix for background image not showing up

--- a/app/scss/components/cards.scss
+++ b/app/scss/components/cards.scss
@@ -5,14 +5,14 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    background-image: url("/images/image-hero-mobile.jpg");
+    background-image: url("../images/image-hero-mobile.jpg");
     background-repeat:no-repeat;
     background-size: 100%;
     height: 300px;
 
     @include breakpoint(large) {
         padding: 0 rem(100) 0 rem(100);
-        background-image: url("/images/image-hero-desktop.jpg");
+        background-image: url("../images/image-hero-desktop.jpg");
         background-repeat: no-repeat;
         background-size: 100%;
     }
